# yolov5_tensorrt5_inference

./: CMakeLists.txt  common.hpp  logging.h  yololayer.cu  yololayer.h  yolov5.cpp
include/: maskRCNNKernels.h  yololayer.h
src/: .yolov5.cpp.swp  maskRCNNKernels.cu  resizeNearestPlugin.cpp  yolov5.cpp
